# obj-rendering

./: README.md
homework-4/: CMakeLists.txt  README.md  vcpkg.json
homework-4/include/: AssimpImport.h  Frustum.h  Mesh3D.h  Object3D.h  lines.h  triangles.h
homework-4/src/: AssimpImport.cpp  Mesh3D.cpp  Object3D.cpp  lines.cpp  main.cpp  triangles.cpp
